--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "react": "^16.6.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
+    "react-flex": "^2.2.8",
     "react-scripts": "2.0.3",
-    "react-shapes": "^0.1.0"
+    "react-shapes": "^0.1.0",
+    "simple-flexbox": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
