--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "url": "https://github.gatech.edu/CS1371/quideo"
   },
   "author": "CS 1371 <arao81@gatech.edu> (https://github.gatech.edu/CS1371)",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^5.12.0"
+  }
 }
