--- a/package.json
+++ b/package.json
@@ -1,20 +1,31 @@
 {
   "name": "quideo",
-  "version": "0.0.0",
-  "description": "Quideo is the premier teaching tool for CS 1371",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "version": "0.1.0",
+  "description": "Quideo is the premiere teaching tool for CS 1371",
+  "author": "CS 1371 <arao81@gatech.edu> (https://github.gatech.edu/CS1371)",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.gatech.edu/CS1371/quideo"
   },
-  "author": "CS 1371 <arao81@gatech.edu> (https://github.gatech.edu/CS1371)",
-  "license": "MIT",
-  "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "eslint": "^5.12.0"
-  }
+  "dependencies": {
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-scripts": "2.1.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
