--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "url": "https://github.gatech.edu/CS1371/quideo"
   },
   "dependencies": {
+    "eslint-plugin-react": "^7.12.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
@@ -27,5 +28,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "eslint": "^5.14.1"
+  }
 }
