--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,6 +31,5 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint": "^5.14.1"
   }
 }
