--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.13.0",
-    "prettier": "^1.17.0"
+    "prettier": "^1.17.0",
+    "stylelint": "^10.0.1",
+    "stylelint-config-standard": "^18.3.0"
   }
 }
