--- a/.editorconfig
+++ b/.editorconfig
@@ -15,7 +15,7 @@ charset = utf-8
 indent_style = tab
 
 # Indentation override for all JS under lib directory
-[*.js]
+[{*.js,*.jsx,*.css}]
 indent_style = space
 indent_size = 2
 
