--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@fortawesome/pro-regular-svg-icons": "^5.8.2",
     "@fortawesome/pro-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "brace": "^0.11.1",
     "object-hash": "^1.3.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-ace": "^6.5.0",
     "react-autosize-textarea": "^7.0.0",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.0.8",
