--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-ace": "^6.5.0",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.0.8",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-syntax-highlighter": "^10.2.1"
   },
