--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-ace": "^6.5.0",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.0.8",
+    "react-router": "^5.0.1",
     "react-router-dom": "^5.0.0",
+    "react-router-prop-types": "^1.0.4",
     "react-scripts": "3.0.1",
     "react-syntax-highlighter": "^10.2.1"
   },
